# improvization

./: .gitignore  Dockerfile  caller.py  main.py  pyproject.toml  requirement.txt  test_output.txt  test_wrong_contact.py
app/agents/postcall_agent/: __init__.py  _base.py  main.py
app/agents/postcall_agent/backup/: old-main.py
app/agents/postcall_agent/tools/: __init__.py  act0010_abrupt_call.py  act0011_wrong_contact.py  act0011_wrong_user.py  act001_promise_to_pay.py  act002_escalation.py  act003_dispute.py  act004_document_copy.py  act005_partial_payment.py  act006_doubtful_receivable.py  act007_credit_request.py  act008_other_request.py  act009_voice_mail.py
app/agents/precall_agent/: __init__.py  call_one.py  call_two.py
app/agents/precall_agent/tools/: __init__.py  calculate_date.py
app/api/: endpoints.py
app/blobstorage/: blob_manager.py
app/caller_features/: audit_manager.py  call_report.py  context_limit.py  parameter.py
app/config/: __init__.py  src.py
app/cosmos/: db.py
