[project]
name = "collections-prod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "fastapi>=0.116.1",
    "loguru>=0.7.3",
    "numba>=0.61.2",
    "pipecat-ai[azure,deepgram,elevenlabs,openai,runner,silero,webrtc]>=0.0.100,<0.108",
    "pipecat-ai-cli",
    "python-dotenv>=1.1.1",
    "numpy>=2.2.6",
    "twilio>=9.0.0",
    "uvicorn>=0.35.0",
    "langchain>=0.1.0",
    "langchain-core",
    "langchain-openai",
    "azure-ai-contentsafety>=1.0.0",
    "azure-identity>=1.14.0",
    "azure-cosmos>=4.7.0",
    "azure-storage-blob>=12.0.0",
    "aiohttp>=3.9.0"
]